<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".RouteDetail" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:text="@string/route_details"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:textColor="#990000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/select_day_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/select_day_option"
        android:textColor="#000000"
        android:textSize="15sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:baselineAligned="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" 
        android:visibility="gone">

        <Button
            android:id="@+id/weekdayButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@layout/layout_button"
            android:text="@string/weekday" />

        <Button
            android:id="@+id/saturdayButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@layout/layout_button"
            android:text="@string/saturday" />

        <Button
            android:id="@+id/sundayButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@layout/layout_button"
            android:text="@string/sunday" />
    </RelativeLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/back"
        android:background="@layout/layout_button"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loadingDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/loading"
        android:textColor="#CC0000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

    <ListView
        android:id="@+id/timetableList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:dividerHeight="2dp"
        android:drawSelectorOnTop="false"
        android:listSelector="@android:color/transparent"
        android:textFilterEnabled="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noTimetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/no_timetable"
        android:textColor="#CC0000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>