<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ListActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="5dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/enterStreetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/enter_street_name"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@layout/layout_button"
        android:text="@string/search"
        android:textAllCaps="false" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_margin="10dp"
        android:background="@android:color/black" />

    <ListView
        android:id="@+id/listOfRoutes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:dividerHeight="2dp"
        android:drawSelectorOnTop="false"
        android:textFilterEnabled="true" />

    <TextView
        android:id="@+id/noRouteFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/no_route_found"
        android:textColor="#CC0000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loadingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:text="@string/loading"
        android:textColor="#CC0000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>